--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
       </section>
 
-      <section class="section">
+      <section class="section third-section">
         <h2 class="section__title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
@@ -234,7 +234,7 @@
             </div>
             <div class="gallery__item gallery__item-wide">
               <img
-                src="./images/books.png"
+                src="./images/street.png"
                 alt="Книги"
                 class="gallery__image"
                 loading="lazy"
@@ -242,7 +242,7 @@
             </div>
             <div class="gallery__item">
               <img
-                src="./images/street.png"
+                src="./images/books.png"
                 alt="Улица"
                 class="gallery__image"
                 loading="lazy"
