--- a/index.html
+++ b/index.html
@@ -134,16 +134,16 @@
         </div>
       </section>
 
-      <section class="section third-section">
+      <section class="section">
         <h2 class="section__title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
         <div class="section__content">
+          <h3 class="article__title title-decor">
+            5 простых (на самом деле не очень) советов
+          </h3>
           <div class="article">
-            <h3 class="article__title title-decor">
-              5 простых (на самом деле не очень) советов
-            </h3>
             <h3 class="article__title title-decor-special">
               Представьте небо и облака
             </h3>
