--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       </section>
 
       <section class="section section-wide">
-        <h2 class="article__title title-decor">А можно в картинках?</h2>
+        <h2 class="article__title title-decor-galery">А можно в картинках?</h2>
         <div class="section__content">
           <div class="gallery">
             <div class="gallery__item gallery__item-wide">
