--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </header>
 
     <main class="content">
-      <section class="section">
+      <section class="section section_default">
         <h2 class="section__title">Почему сосредоточиться так сложно</h2>
         <div class="section__content">
           <div class="article">
@@ -94,7 +94,7 @@
         </div>
       </section>
 
-      <section class="section">
+      <section class="section section_different">
         <h2 class="section__title">Что снижает концентрацию внимания?</h2>
         <div class="section__content">
           <div class="article">
@@ -134,7 +134,7 @@
         </div>
       </section>
 
-      <section class="section">
+      <section class="section section_default">
         <h2 class="section__title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
