--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="ru" class="page theme_dark">
   <head>
     <meta charset="UTF-8" />
@@ -211,7 +210,7 @@
             <div class="gallery__item gallery__item-wide">
               <img
                 src="./images/sunset.png"
-                alt="Закат"
+                alt="Закат на озере"
                 class="gallery__image"
                 loading="lazy"
               />
@@ -219,7 +218,7 @@
             <div class="gallery__item gallery__item-tall">
               <img
                 src="./images/ice-cream.png"
-                alt="Мороженое"
+                alt="Милое мороженое"
                 class="gallery__image"
                 loading="lazy"
               />
@@ -227,7 +226,7 @@
             <div class="gallery__item gallery__item-tall">
               <img
                 src="./images/tape.png"
-                alt="Кассета"
+                alt="Музыкальная касета для старых плееров"
                 class="gallery__image"
                 loading="lazy"
               />
@@ -235,7 +234,7 @@
             <div class="gallery__item gallery__item-wide">
               <img
                 src="./images/books.png"
-                alt="Книги"
+                alt="Стопка книг"
                 class="gallery__image"
                 loading="lazy"
               />
@@ -243,7 +242,7 @@
             <div class="gallery__item">
               <img
                 src="./images/street.png"
-                alt="Улица"
+                alt="Узкая улица"
                 class="gallery__image"
                 loading="lazy"
               />
