--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body class="page">
     <header class="header decorated-zone frame">
-      <div class="header__decoration" aria-hidden="true">REC</div>
+      <span class="header__decoration" aria-hidden="true">REC</span>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -59,7 +59,7 @@
       <section class="section section_default">
         <h2 class="section__title">Почему сосредоточиться так сложно</h2>
         <div class="section__content">
-          <div class="article">
+          <article class="article">
             <h3 class="article__title title-decor">Многозадачность</h3>
             <p class="article__text">
               Особенно сложно сосредоточиться, когда задач много и все они —
@@ -77,8 +77,8 @@
               «гормоны стресса». Из-за этого мы работаем невнимательно:
               ошибаемся и быстро устаём.
             </p>
-          </div>
-          <div class="article">
+          </article>
+          <article class="article">
             <h3 class="article__title title-decor">Дофамин</h3>
             <p class="article__text">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В
@@ -90,14 +90,14 @@
               чувствуем удовольствие. Получается замкнутый круг: чем больше
               отвлекаешься, тем больше удовольствия получаешь.
             </p>
-          </div>
+          </article>
         </div>
       </section>
 
       <section class="section section_different">
         <h2 class="section__title">Что снижает концентрацию внимания?</h2>
         <div class="section__content">
-          <div class="article">
+          <article class="article">
             <h3 class="article__title title-decor">Многозадачность</h3>
             <p class="article__text">
               Как концентрация может снижаться из-за… концентрации? Любая
@@ -107,8 +107,8 @@
               собранными всё время — невозможно. Концентрация — мышца, и она
               может не выдержать, если не давать ей отдохнуть.
             </p>
-          </div>
-          <div class="article">
+          </article>
+          <article class="article">
             <h3 class="article__title title-decor">Еда</h3>
             <p class="article__text">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
@@ -118,8 +118,8 @@
               углеводов» заканчивается, мы чувствуем усталость и сонливость. И
               хотим ещё больше быстрых углеводов.
             </p>
-          </div>
-          <div class="article">
+          </article>
+          <article class="article">
             <h3 class="article__title title-decor">Гаджеты</h3>
             <p class="article__text">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
@@ -130,7 +130,7 @@
               Вот и получается, что чем больше времени мы проводим в гаджетах,
               тем больше времени затем нужно, чтобы вернуться к работе.
             </p>
-          </div>
+          </article>
         </div>
       </section>
 
@@ -143,7 +143,7 @@
           <h3 class="article__title title-decor">
             5 простых (на самом деле не очень) советов
           </h3>
-          <div class="article">
+          <article class="article">
             <h3 class="article__title title-decor-special">
               Представьте небо и облака
             </h3>
@@ -157,8 +157,8 @@
               вернуться в настоящий момент, а не волноваться о потенциальных
               проблемах из будущего.
             </p>
-          </div>
-          <div class="article">
+          </article>
+          <article class="article">
             <h3 class="article__title title-decor-special">Включите музыку</h3>
             <p class="article__text">
               Но не любую, и не любимую. Любимая может быть связана с сильными
@@ -166,8 +166,8 @@
               Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
               попробовать включить плейлист c «белым шумом» или нейромузыкой.
             </p>
-          </div>
-          <div class="article">
+          </article>
+          <article class="article">
             <h3 class="article__title title-decor-special">Прогуляйтесь</h3>
             <p class="article__text">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
@@ -182,8 +182,8 @@
               мозг поступит ещё больше кислорода и он будет лучше работать. Но и
               простая двадцатиминутная прогулка — тоже отличный вариант.
             </p>
-          </div>
-          <div class="article">
+          </article>
+          <article class="article">
             <h3 class="article__title title-decor-special">Хорошо ешьте</h3>
             <p class="article__text">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
@@ -191,8 +191,8 @@
               высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
               чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
             </p>
-          </div>
-          <div class="article">
+          </article>
+          <darticleiv class="article">
             <h3 class="article__title title-decor-special">Читайте</h3>
             <p class="article__text">
               Настоящие бумажные книги. Это правда помогает с концентрацией:
@@ -200,7 +200,7 @@
               даже секунд. А вот интересная книга способна затянуть и на
               несколько часов и круто тренирует направленное внимание.
             </p>
-          </div>
+          </article>
         </div>
       </section>
 
