--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
               чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
             </p>
           </article>
-          <darticleiv class="article">
+          <article class="article">
             <h3 class="article__title title-decor-special">Читайте</h3>
             <p class="article__text">
               Настоящие бумажные книги. Это правда помогает с концентрацией:
@@ -211,7 +211,7 @@
             <div class="gallery__item gallery__item-wide">
               <img
                 src="./images/sunset.png"
-                alt="Закат на озере"
+                alt="Красочнй пейзаж закаата на горном озере"
                 class="gallery__image"
                 loading="lazy"
               />
