--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <div class="gallery__item gallery__item-tall">
               <img
                 src="./images/ice-cream.png"
-                alt="Милое мороженое"
+                alt=" мороженое"
                 class="gallery__image"
                 loading="lazy"
               />
@@ -235,7 +235,7 @@
             <div class="gallery__item gallery__item-wide">
               <img
                 src="./images/books.png"
-                alt="Стопка книг"
+                alt="Стопка книг с кружкой кофе сверху"
                 class="gallery__image"
                 loading="lazy"
               />
@@ -243,7 +243,7 @@
             <div class="gallery__item">
               <img
                 src="./images/street.png"
-                alt="Узкая улица"
+                alt="Узкая улица в японском стиле"
                 class="gallery__image"
                 loading="lazy"
               />
