--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
       <h1 class="header__title">no focus</h1>
       <p class="header__text title-decor">
         Что делать, когда не можешь делать ничего
-        <br />Или почему нам так сложно сконцентрироваться, особенно когда очень
-        надо
+        <span class="header__subtitle">
+          Или почему нам так сложно сконцентрироваться, особенно когда очень
+          надо
+        </span>
       </p>
     </header>
 
